fixes create icon alignment regression

--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -41,6 +41,7 @@
     & svg {
         width:  1.4em;
         height: 1.4em;
+        align-self: center;
     }
 }
 
